<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/aboutIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:text="@string/about_description" />
    
    <TextView 
        android:id="@+id/aboutTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dip"
        android:paddingBottom="7dip"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:text="@string/team" />
    
    <ListView
        android:id="@+id/listAuthors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />
    
    <TextView 
        android:id="@+id/aboutAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:textSize="17sp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:text="@string/about_alert" />

</LinearLayout>
